--- a/css/index.css
+++ b/css/index.css
@@ -19,14 +19,14 @@ html {
 
 .bg .content {
     position: relative;
-    top: 35%;
+    top: 37%;
     width: 100%;
 }
 
 .bg .content h1 {
     font-size: 45px;
-    margin-bottom: 10px;
-    letter-spacing: 3px;
+    margin-bottom: 15px;
+    letter-spacing: 2px;
     text-transform: uppercase;
 }
 
@@ -35,8 +35,33 @@ html {
     font-style: italic;
 }
 
+.bg .content a {
+    padding: 10px 15px;
+    border: none;
+    color: rgb(48, 48, 48);
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 15px;
+    background-color: #fff;
+    border-radius: 4px;
+}
+
 .bg .content i {
-    font-size: 20px;
+    font-size: 17px;
+    padding-right: 10px;
+    margin-right: 10px;
+    border-right: 1px solid rgb(111, 111, 111);
+}
+
+.bg .content a:hover {
+    text-decoration: none;
+    background-color: #dd4b39;
+    color: #fff;
+    transition: 0.5s;
+}
+
+.bg .content a:hover i {
+    border-right: 1px solid #ffffff;
 }
 
 .bg:before {
@@ -46,7 +71,7 @@ html {
     height: 100%;
     left: 0;
     top: 0;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .bg .header-topbar {
@@ -104,7 +129,11 @@ html {
     font-size: 13px;
 }
 
-.bg .header-topbar .container ul li a i {
+.bg .header-topbar .pull-right li a i {
+    width: 15px;
+}
+
+.bg .header-topbar .pull-left li a i {
     width: 20px;
     text-align: center;
 }
@@ -120,4 +149,23 @@ html {
     color: #fff;
     padding: 9px 0;
     display: block;
+}
+
+.banner {
+    background: linear-gradient(to right, #ffffff 0%, #ffffff 15%, #ffffff 35%, #ffffff 50%, #ffffff 85%, #ffdd00 90%, #ffffff 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: color-text 8s linear infinite;
+}
+
+@keyframes color-text {
+    0% {
+        background-position: 0px 0px;
+    }
+    50% {
+        background-position: 600px 0px;
+    }
+    100% {
+        background-position: 0px 0px;
+    }
 }
