--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ html {
 }
 
 .bg .content a:hover i {
-    border-right: 1px solid #ffffff;
+    border-right: 1px solid #e8e8e8;
 }
 
 .bg:before {
@@ -83,10 +83,6 @@ html {
     width: 100%;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.bg .header-topbar>.container {
-    padding-right: 0;
 }
 
 .bg .header-topbar .container>ul {
@@ -120,6 +116,7 @@ html {
 .bg .header-topbar .container .pull-right .dropdown-menu>li>a:hover {
     color: #00ff83;
     background-color: transparent;
+    outline: none;
 }
 
 .bg .header-topbar .container>ul>li>a {
@@ -143,6 +140,7 @@ html {
     color: #00ff83;
     text-decoration: none;
     transition: 0.8s;
+    outline: none;
 }
 
 .bg .header-topbar ul>li>span.rot {
@@ -167,5 +165,11 @@ html {
     }
     100% {
         background-position: 0px 0px;
+    }
+}
+
+@media (min-width: 768px) {
+    .modal-dialog {
+        margin-top: 10%;
     }
 }
